fixed dark mode. smooth transition

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,1 +1,9 @@
 /* styles on top of Bootstrap */
+
+* {
+  transition: background-color 300ms;
+}
+
+.form-floating > input {
+  transition: background-color 300ms;
+}
